# rusty-metal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: compare.py  conclusions.md  run.sh
benches/python/: pyproject.toml
benches/python/bench/: harness.py  run_all.py
benches/python/bench/kernels/: activations.py  attention.py  correlation.py  dot_products.py  elementwise.py  fft.py  fused.py  fused_custom.py  layout.py  linalg.py  loss.py  normalization.py  optimizers.py  prng.py  quantization.py  reductions.py  scans.py  signal.py  simulation.py  softmax.py  sorting.py
benches/rust/: Cargo.toml
benches/rust/src/: harness.rs  main.rs  metal_ctx.rs  neon.rs  shaders.rs
benches/rust/src/kernels/: activations.rs  attention.rs  correlation.rs  dot_products.rs  elementwise.rs  fft.rs  fused.rs  fused_custom.rs  layout.rs  linalg.rs  loss.rs  mod.rs  normalization.rs  optimizers.rs  prng.rs  quantization.rs  reductions.rs  scans.rs  signal.rs  simulation.rs  softmax.rs  sorting.rs
content/: metal-agent.md  metal-kernel-hints.md
src/: main.rs
