[package]
name = "rusty-metal"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Metal GPU compute agent for Claude Code — 109 kernels, operation routing, fusion patterns, pipeline recipes"
license = "MIT"
repository = "https://github.com/m0at/rusty-metal"
keywords = ["metal", "gpu", "apple-silicon", "claude-code", "compute"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
